grammar_analysis/syntax/seal.output
Nonterminals useless in grammar

    variable_list_notNone
    actual_list_notNone


Terminals unused in grammar

    VAR


Rules useless in parser due to conflicts

    8 variableDecl_list: %empty

   32 stmt_list: %empty
   33          | stmt_list stmt


State 14 conflicts: 1 shift/reduce
State 19 conflicts: 2 shift/reduce, 55 reduce/reduce
State 25 conflicts: 1 shift/reduce, 18 reduce/reduce
State 50 conflicts: 18 reduce/reduce
State 69 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl
    3          | decl_list decl

    4 decl: variableDecl
    5     | callDecl

    6 variableDecl: variable ';'

    7 variableDecl_list: %empty
    8                  | %empty
    9                  | variableDecl
   10                  | variableDecl_list variableDecl

   11 variable: TYPEID OBJECTID

   12 callDecl: TYPEID FUNC OBJECTID '(' variable_list ')' stmtBlock
   13         | TYPEID FUNC OBJECTID '(' ')' stmtBlock

   14 variable_list: %empty
   15              | variable
   16              | variable_list ',' variable

   17 stmtBlock: '{' variableDecl_list stmt_list '}'
   18          | '{' stmt_list '}'
   19          | '{' variableDecl_list '}'
   20          | '{' '}'

   21 stmt_list: %empty
   22          | stmt_list stmt

   23 stmt: ';'
   24     | expr ';'
   25     | ifStmt
   26     | whileStmt
   27     | forStmt
   28     | breakStmt
   29     | continueStmt
   30     | returnStmt
   31     | stmtBlock

   32 stmt_list: %empty
   33          | stmt_list stmt

   34 ifStmt: IF expr stmtBlock ELSE stmtBlock
   35       | IF expr stmtBlock

   36 whileStmt: WHILE expr stmtBlock

   37 forStmt: FOR expr ';' expr ';' expr stmtBlock
   38        | FOR expr ';' expr ';' stmtBlock
   39        | FOR expr ';' ';' expr stmtBlock
   40        | FOR expr ';' ';' stmtBlock
   41        | FOR ';' expr ';' expr stmtBlock
   42        | FOR ';' expr ';' stmtBlock
   43        | FOR ';' ';' expr stmtBlock
   44        | FOR ';' ';' stmtBlock

   45 returnStmt: RETURN expr ';'
   46           | RETURN ';'

   47 continueStmt: CONTINUE ';'

   48 breakStmt: BREAK ';'

   49 expr: OBJECTID '=' expr
   50     | CONST_INT
   51     | CONST_BOOL
   52     | CONST_FLOAT
   53     | CONST_STRING
   54     | call
   55     | '(' expr ')'
   56     | OBJECTID
   57     | expr '+' expr
   58     | expr '-' expr
   59     | expr '*' expr
   60     | expr '/' expr
   61     | expr '%' expr
   62     | '-' expr
   63     | expr '<' expr
   64     | expr LE expr
   65     | expr EQUAL expr
   66     | expr NE expr
   67     | expr GE expr
   68     | expr '>' expr
   69     | expr AND expr
   70     | expr OR expr
   71     | expr '^' expr
   72     | '!' expr
   73     | '~' expr
   74     | expr '&' expr
   75     | expr '|' expr

   76 call: OBJECTID '(' actual_list ')'
   77     | OBJECTID '(' ')'

   78 actual: expr

   79 actual_list: %empty
   80            | actual
   81            | actual_list ',' actual


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 72
    '%' (37) 61
    '&' (38) 74
    '(' (40) 12 13 55 76 77
    ')' (41) 12 13 55 76 77
    '*' (42) 59
    '+' (43) 57
    ',' (44) 16 81
    '-' (45) 58 62
    '/' (47) 60
    ';' (59) 6 23 24 37 38 39 40 41 42 43 44 45 46 47 48
    '<' (60) 63
    '=' (61) 49
    '>' (62) 68
    '^' (94) 71
    '{' (123) 17 18 19 20
    '|' (124) 75
    '}' (125) 17 18 19 20
    '~' (126) 73
    error (256)
    IF (258) 34 35
    ELSE (260) 34
    WHILE (261) 36
    FOR (262) 37 38 39 40 41 42 43 44
    BREAK (263) 48
    CONTINUE (264) 47
    FUNC (265) 12 13
    RETURN (266) 45 46
    CONST_BOOL <boolean> (267) 51
    CONST_INT <symbol> (268) 50
    CONST_STRING <symbol> (269) 53
    CONST_FLOAT <symbol> (270) 52
    VAR (271)
    AND (274) 69
    OR (275) 70
    EQUAL (276) 65
    NE (277) 66
    GE (278) 67
    LE (279) 64
    OBJECTID <symbol> (284) 11 12 13 49 56 76 77
    TYPEID <symbol> (285) 11 12 13
    UMINUS (287)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    program <program> (45)
        on left: 1
        on right: 0
    decl_list <decls> (46)
        on left: 2 3
        on right: 1 3
    decl <decl> (47)
        on left: 4 5
        on right: 2 3
    variableDecl <variableDecl> (48)
        on left: 6
        on right: 4 9 10
    variableDecl_list <variableDecls> (49)
        on left: 7 8 9 10
        on right: 10 17 19
    variable <variable> (50)
        on left: 11
        on right: 6 15 16
    callDecl <callDecl> (51)
        on left: 12 13
        on right: 5
    variable_list <variables> (52)
        on left: 14 15 16
        on right: 12 16
    stmtBlock <stmtBlock> (53)
        on left: 17 18 19 20
        on right: 12 13 31 34 35 36 37 38 39 40 41 42 43 44
    stmt_list <stmts> (54)
        on left: 21 22 32 33
        on right: 17 18 22 33
    stmt <stmt> (55)
        on left: 23 24 25 26 27 28 29 30 31
        on right: 22 33
    ifStmt <ifStmt> (56)
        on left: 34 35
        on right: 25
    whileStmt <whileStmt> (57)
        on left: 36
        on right: 26
    forStmt <forStmt> (58)
        on left: 37 38 39 40 41 42 43 44
        on right: 27
    returnStmt <returnStmt> (59)
        on left: 45 46
        on right: 30
    continueStmt <continueStmt> (60)
        on left: 47
        on right: 29
    breakStmt <breakStmt> (61)
        on left: 48
        on right: 28
    expr <expr> (62)
        on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 24 34 35 36 37 38 39 40 41 42 43 45 49 55 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 78
    call <call> (63)
        on left: 76 77
        on right: 54
    actual <actual> (64)
        on left: 78
        on right: 80 81
    actual_list <actuals> (65)
        on left: 79 80 81
        on right: 76 81


State 0

    0 $accept: . program $end

    TYPEID  shift, and go to state 1

    program       go to state 2
    decl_list     go to state 3
    decl          go to state 4
    variableDecl  go to state 5
    variable      go to state 6
    callDecl      go to state 7


State 1

   11 variable: TYPEID . OBJECTID
   12 callDecl: TYPEID . FUNC OBJECTID '(' variable_list ')' stmtBlock
   13         | TYPEID . FUNC OBJECTID '(' ')' stmtBlock

    FUNC      shift, and go to state 8
    OBJECTID  shift, and go to state 9


State 2

    0 $accept: program . $end

    $end  shift, and go to state 10


State 3

    1 program: decl_list .
    3 decl_list: decl_list . decl

    TYPEID  shift, and go to state 1

    $default  reduce using rule 1 (program)

    decl          go to state 11
    variableDecl  go to state 5
    variable      go to state 6
    callDecl      go to state 7


State 4

    2 decl_list: decl .

    $default  reduce using rule 2 (decl_list)


State 5

    4 decl: variableDecl .

    $default  reduce using rule 4 (decl)


State 6

    6 variableDecl: variable . ';'

    ';'  shift, and go to state 12


State 7

    5 decl: callDecl .

    $default  reduce using rule 5 (decl)


State 8

   12 callDecl: TYPEID FUNC . OBJECTID '(' variable_list ')' stmtBlock
   13         | TYPEID FUNC . OBJECTID '(' ')' stmtBlock

    OBJECTID  shift, and go to state 13


State 9

   11 variable: TYPEID OBJECTID .

    $default  reduce using rule 11 (variable)


State 10

    0 $accept: program $end .

    $default  accept


State 11

    3 decl_list: decl_list decl .

    $default  reduce using rule 3 (decl_list)


State 12

    6 variableDecl: variable ';' .

    $default  reduce using rule 6 (variableDecl)


State 13

   12 callDecl: TYPEID FUNC OBJECTID . '(' variable_list ')' stmtBlock
   13         | TYPEID FUNC OBJECTID . '(' ')' stmtBlock

    '('  shift, and go to state 14


State 14

   12 callDecl: TYPEID FUNC OBJECTID '(' . variable_list ')' stmtBlock
   13         | TYPEID FUNC OBJECTID '(' . ')' stmtBlock

    TYPEID  shift, and go to state 15
    ')'     shift, and go to state 16

    ')'       [reduce using rule 14 (variable_list)]
    $default  reduce using rule 14 (variable_list)

    variable       go to state 17
    variable_list  go to state 18


State 15

   11 variable: TYPEID . OBJECTID

    OBJECTID  shift, and go to state 9


State 16

   13 callDecl: TYPEID FUNC OBJECTID '(' ')' . stmtBlock

    '{'  shift, and go to state 19

    stmtBlock  go to state 20


State 17

   15 variable_list: variable .

    $default  reduce using rule 15 (variable_list)


State 18

   12 callDecl: TYPEID FUNC OBJECTID '(' variable_list . ')' stmtBlock
   16 variable_list: variable_list . ',' variable

    ')'  shift, and go to state 21
    ','  shift, and go to state 22


State 19

   17 stmtBlock: '{' . variableDecl_list stmt_list '}'
   18          | '{' . stmt_list '}'
   19          | '{' . variableDecl_list '}'
   20          | '{' . '}'

    TYPEID  shift, and go to state 15
    '}'     shift, and go to state 23

    IF            reduce using rule 7 (variableDecl_list)
    IF            [reduce using rule 8 (variableDecl_list)]
    IF            [reduce using rule 21 (stmt_list)]
    IF            [reduce using rule 32 (stmt_list)]
    WHILE         reduce using rule 7 (variableDecl_list)
    WHILE         [reduce using rule 8 (variableDecl_list)]
    WHILE         [reduce using rule 21 (stmt_list)]
    WHILE         [reduce using rule 32 (stmt_list)]
    FOR           reduce using rule 7 (variableDecl_list)
    FOR           [reduce using rule 8 (variableDecl_list)]
    FOR           [reduce using rule 21 (stmt_list)]
    FOR           [reduce using rule 32 (stmt_list)]
    BREAK         reduce using rule 7 (variableDecl_list)
    BREAK         [reduce using rule 8 (variableDecl_list)]
    BREAK         [reduce using rule 21 (stmt_list)]
    BREAK         [reduce using rule 32 (stmt_list)]
    CONTINUE      reduce using rule 7 (variableDecl_list)
    CONTINUE      [reduce using rule 8 (variableDecl_list)]
    CONTINUE      [reduce using rule 21 (stmt_list)]
    CONTINUE      [reduce using rule 32 (stmt_list)]
    RETURN        reduce using rule 7 (variableDecl_list)
    RETURN        [reduce using rule 8 (variableDecl_list)]
    RETURN        [reduce using rule 21 (stmt_list)]
    RETURN        [reduce using rule 32 (stmt_list)]
    CONST_BOOL    reduce using rule 7 (variableDecl_list)
    CONST_BOOL    [reduce using rule 8 (variableDecl_list)]
    CONST_BOOL    [reduce using rule 21 (stmt_list)]
    CONST_BOOL    [reduce using rule 32 (stmt_list)]
    CONST_INT     reduce using rule 7 (variableDecl_list)
    CONST_INT     [reduce using rule 8 (variableDecl_list)]
    CONST_INT     [reduce using rule 21 (stmt_list)]
    CONST_INT     [reduce using rule 32 (stmt_list)]
    CONST_STRING  reduce using rule 7 (variableDecl_list)
    CONST_STRING  [reduce using rule 8 (variableDecl_list)]
    CONST_STRING  [reduce using rule 21 (stmt_list)]
    CONST_STRING  [reduce using rule 32 (stmt_list)]
    CONST_FLOAT   reduce using rule 7 (variableDecl_list)
    CONST_FLOAT   [reduce using rule 8 (variableDecl_list)]
    CONST_FLOAT   [reduce using rule 21 (stmt_list)]
    CONST_FLOAT   [reduce using rule 32 (stmt_list)]
    OBJECTID      reduce using rule 7 (variableDecl_list)
    OBJECTID      [reduce using rule 8 (variableDecl_list)]
    OBJECTID      [reduce using rule 21 (stmt_list)]
    OBJECTID      [reduce using rule 32 (stmt_list)]
    TYPEID        [reduce using rule 7 (variableDecl_list)]
    TYPEID        [reduce using rule 8 (variableDecl_list)]
    '-'           reduce using rule 7 (variableDecl_list)
    '-'           [reduce using rule 8 (variableDecl_list)]
    '-'           [reduce using rule 21 (stmt_list)]
    '-'           [reduce using rule 32 (stmt_list)]
    '!'           reduce using rule 7 (variableDecl_list)
    '!'           [reduce using rule 8 (variableDecl_list)]
    '!'           [reduce using rule 21 (stmt_list)]
    '!'           [reduce using rule 32 (stmt_list)]
    '~'           reduce using rule 7 (variableDecl_list)
    '~'           [reduce using rule 8 (variableDecl_list)]
    '~'           [reduce using rule 21 (stmt_list)]
    '~'           [reduce using rule 32 (stmt_list)]
    ';'           reduce using rule 7 (variableDecl_list)
    ';'           [reduce using rule 8 (variableDecl_list)]
    ';'           [reduce using rule 21 (stmt_list)]
    ';'           [reduce using rule 32 (stmt_list)]
    '('           reduce using rule 7 (variableDecl_list)
    '('           [reduce using rule 8 (variableDecl_list)]
    '('           [reduce using rule 21 (stmt_list)]
    '('           [reduce using rule 32 (stmt_list)]
    '{'           reduce using rule 7 (variableDecl_list)
    '{'           [reduce using rule 8 (variableDecl_list)]
    '{'           [reduce using rule 21 (stmt_list)]
    '{'           [reduce using rule 32 (stmt_list)]
    '}'           [reduce using rule 7 (variableDecl_list)]
    '}'           [reduce using rule 8 (variableDecl_list)]
    '}'           [reduce using rule 21 (stmt_list)]
    '}'           [reduce using rule 32 (stmt_list)]
    $default      reduce using rule 7 (variableDecl_list)

    variableDecl       go to state 24
    variableDecl_list  go to state 25
    variable           go to state 6
    stmt_list          go to state 26


State 20

   13 callDecl: TYPEID FUNC OBJECTID '(' ')' stmtBlock .

    $default  reduce using rule 13 (callDecl)


State 21

   12 callDecl: TYPEID FUNC OBJECTID '(' variable_list ')' . stmtBlock

    '{'  shift, and go to state 19

    stmtBlock  go to state 27


State 22

   16 variable_list: variable_list ',' . variable

    TYPEID  shift, and go to state 15

    variable  go to state 28


State 23

   20 stmtBlock: '{' '}' .

    $default  reduce using rule 20 (stmtBlock)


State 24

    9 variableDecl_list: variableDecl .

    $default  reduce using rule 9 (variableDecl_list)


State 25

   10 variableDecl_list: variableDecl_list . variableDecl
   17 stmtBlock: '{' variableDecl_list . stmt_list '}'
   19          | '{' variableDecl_list . '}'

    TYPEID  shift, and go to state 15
    '}'     shift, and go to state 29

    IF            reduce using rule 21 (stmt_list)
    IF            [reduce using rule 32 (stmt_list)]
    WHILE         reduce using rule 21 (stmt_list)
    WHILE         [reduce using rule 32 (stmt_list)]
    FOR           reduce using rule 21 (stmt_list)
    FOR           [reduce using rule 32 (stmt_list)]
    BREAK         reduce using rule 21 (stmt_list)
    BREAK         [reduce using rule 32 (stmt_list)]
    CONTINUE      reduce using rule 21 (stmt_list)
    CONTINUE      [reduce using rule 32 (stmt_list)]
    RETURN        reduce using rule 21 (stmt_list)
    RETURN        [reduce using rule 32 (stmt_list)]
    CONST_BOOL    reduce using rule 21 (stmt_list)
    CONST_BOOL    [reduce using rule 32 (stmt_list)]
    CONST_INT     reduce using rule 21 (stmt_list)
    CONST_INT     [reduce using rule 32 (stmt_list)]
    CONST_STRING  reduce using rule 21 (stmt_list)
    CONST_STRING  [reduce using rule 32 (stmt_list)]
    CONST_FLOAT   reduce using rule 21 (stmt_list)
    CONST_FLOAT   [reduce using rule 32 (stmt_list)]
    OBJECTID      reduce using rule 21 (stmt_list)
    OBJECTID      [reduce using rule 32 (stmt_list)]
    '-'           reduce using rule 21 (stmt_list)
    '-'           [reduce using rule 32 (stmt_list)]
    '!'           reduce using rule 21 (stmt_list)
    '!'           [reduce using rule 32 (stmt_list)]
    '~'           reduce using rule 21 (stmt_list)
    '~'           [reduce using rule 32 (stmt_list)]
    ';'           reduce using rule 21 (stmt_list)
    ';'           [reduce using rule 32 (stmt_list)]
    '('           reduce using rule 21 (stmt_list)
    '('           [reduce using rule 32 (stmt_list)]
    '{'           reduce using rule 21 (stmt_list)
    '{'           [reduce using rule 32 (stmt_list)]
    '}'           [reduce using rule 21 (stmt_list)]
    '}'           [reduce using rule 32 (stmt_list)]
    $default      reduce using rule 21 (stmt_list)

    variableDecl  go to state 30
    variable      go to state 6
    stmt_list     go to state 31


State 26

   18 stmtBlock: '{' stmt_list . '}'
   22 stmt_list: stmt_list . stmt
   33          | stmt_list . stmt

    IF            shift, and go to state 32
    WHILE         shift, and go to state 33
    FOR           shift, and go to state 34
    BREAK         shift, and go to state 35
    CONTINUE      shift, and go to state 36
    RETURN        shift, and go to state 37
    CONST_BOOL    shift, and go to state 38
    CONST_INT     shift, and go to state 39
    CONST_STRING  shift, and go to state 40
    CONST_FLOAT   shift, and go to state 41
    OBJECTID      shift, and go to state 42
    '-'           shift, and go to state 43
    '!'           shift, and go to state 44
    '~'           shift, and go to state 45
    ';'           shift, and go to state 46
    '('           shift, and go to state 47
    '{'           shift, and go to state 19
    '}'           shift, and go to state 48

    stmtBlock     go to state 49
    stmt          go to state 50
    ifStmt        go to state 51
    whileStmt     go to state 52
    forStmt       go to state 53
    returnStmt    go to state 54
    continueStmt  go to state 55
    breakStmt     go to state 56
    expr          go to state 57
    call          go to state 58


State 27

   12 callDecl: TYPEID FUNC OBJECTID '(' variable_list ')' stmtBlock .

    $default  reduce using rule 12 (callDecl)


State 28

   16 variable_list: variable_list ',' variable .

    $default  reduce using rule 16 (variable_list)


State 29

   19 stmtBlock: '{' variableDecl_list '}' .

    $default  reduce using rule 19 (stmtBlock)


State 30

   10 variableDecl_list: variableDecl_list variableDecl .

    $default  reduce using rule 10 (variableDecl_list)


State 31

   17 stmtBlock: '{' variableDecl_list stmt_list . '}'
   22 stmt_list: stmt_list . stmt
   33          | stmt_list . stmt

    IF            shift, and go to state 32
    WHILE         shift, and go to state 33
    FOR           shift, and go to state 34
    BREAK         shift, and go to state 35
    CONTINUE      shift, and go to state 36
    RETURN        shift, and go to state 37
    CONST_BOOL    shift, and go to state 38
    CONST_INT     shift, and go to state 39
    CONST_STRING  shift, and go to state 40
    CONST_FLOAT   shift, and go to state 41
    OBJECTID      shift, and go to state 42
    '-'           shift, and go to state 43
    '!'           shift, and go to state 44
    '~'           shift, and go to state 45
    ';'           shift, and go to state 46
    '('           shift, and go to state 47
    '{'           shift, and go to state 19
    '}'           shift, and go to state 59

    stmtBlock     go to state 49
    stmt          go to state 50
    ifStmt        go to state 51
    whileStmt     go to state 52
    forStmt       go to state 53
    returnStmt    go to state 54
    continueStmt  go to state 55
    breakStmt     go to state 56
    expr          go to state 57
    call          go to state 58


State 32

   34 ifStmt: IF . expr stmtBlock ELSE stmtBlock
   35       | IF . expr stmtBlock

    CONST_BOOL    shift, and go to state 38
    CONST_INT     shift, and go to state 39
    CONST_STRING  shift, and go to state 40
    CONST_FLOAT   shift, and go to state 41
    OBJECTID      shift, and go to state 42
    '-'           shift, and go to state 43
    '!'           shift, and go to state 44
    '~'           shift, and go to state 45
    '('           shift, and go to state 47

    expr  go to state 60
    call  go to state 58


State 33

   36 whileStmt: WHILE . expr stmtBlock

    CONST_BOOL    shift, and go to state 38
    CONST_INT     shift, and go to state 39
    CONST_STRING  shift, and go to state 40
    CONST_FLOAT   shift, and go to state 41
    OBJECTID      shift, and go to state 42
    '-'           shift, and go to state 43
    '!'           shift, and go to state 44
    '~'           shift, and go to state 45
    '('           shift, and go to state 47

    expr  go to state 61
    call  go to state 58


State 34
